# VKMax

./: .gitignore  README.md  __init__.py  docker-compose.yml
BACKEND/WebParser/: README.md  devmax_site_bundle.json  domain_tree.txt  edges_eduson.csv  graph_eduson.json  pyproject.toml
BACKEND/WebParser/content/blog-eduson-academy/: articles__6ee4d6bb.html  courses__f6c4f221.html  index__86020aa9.html
BACKEND/WebParser/content/eduson-academy/: 1c-developer__f02ecd90.html  1c-excel__973c1025.html  1c__5674de1a.html  3ds-max__958ef563.html  accountant-economist__8eb75a14.html  accountant-independent__6976ac21.html  accountant__b6541cfc.html  ai-construction__65267ea0.html  ai-designer__c26104dc.html  ai-workers__6f0e6b76.html  ai__cb9591cb.html  analytics-director__ba86e6ed.html  analytics-for-managers__55b267f7.html  android-developer__63c3bb63.html  autocad__ee8a9a83.html  autotester-python__f6632f21.html  bi-analyst__534491bb.html  business-analyst__1732a62a.html  business-consultant__e6882192.html  business-development-manager__15dd081a.html  business-process-manager__2c4fa278.html  ceo__313fb5be.html  chief-product-officer__b73b5203.html  client-services-director__e0c2baf6.html  com-dir__8314523b.html  construction-director__af1881ae.html  contacts__43133d5d.html  copywriter__2eefcffc.html  (+141 more)
BACKEND/WebParser/scripts/: bench_single_domain.py
BACKEND/WebParser/tests/: test_crawler_smoke.py  test_link_extractor.py  test_url_normalizer.py
BACKEND/WebParser/webparser/: __init__.py
BACKEND/WebParser/webparser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+393 files in other folders)
